syntax = "proto3";

package reference;

option go_package = "github.com/monax/hoard/v4/reference";

message Ref {
    bytes Address = 1;
    bytes SecretKey = 2;
    bytes Salt = 3;
}

